# mp2-2025-lab2-matrix

./: .gitignore  CMakeLists.txt
include/: tmatrix.hpp
samples/: sample_matrix.cpp
test/: test_tmatrix.cpp  test_tvector.cpp
